# grpc-experiments

./: README.md
function_call/: Makefile  README.md  client.py
protos/: python_to_python_simple.proto  python_to_python_two_way_stream.proto  python_to_rust_simple.proto
python_to_python_simple/: .dir-locals.el  Makefile  README.md  client.py  requirements.txt  server.py
python_to_python_two_way_stream/: .dir-locals.el  .gitignore  Makefile  README.md  client.py  requirements.in  server.py  setup.cfg
python_to_rust_simple/: .dir-locals.el  .gitignore  Cargo.toml  Makefile  README.md  build.rs  client.py  requirements.txt
python_to_rust_simple/src/: server.rs
rest_simple/: Makefile  client.py  requirements.in  requirements.txt  server.py
